--- a/standardSettings.json
+++ b/standardSettings.json
@@ -1,5 +1,5 @@
 {
-    "maximumAfk": 120,
+    "maximumAfk": 100,
     "afkRemoval": true,                
     "maximumDc": 60,                                
     "bouncerPlus": true,                
@@ -33,8 +33,8 @@
     "opLink": null,
     "rulesLink": null,
     "themeLink": null,
-    "fbLink": null,
-    "youtubeLink": null,
+    "fbLink": "www.facebook.com/NikhilJangid007",
+    "youtubeLink": "http://youtube.com/UKFdubstep" "www.youtube.com/MonstercatMedia" ,
     "website": null,
     "intervalMessages": [],
     "messageInterval": 5
