--- a/exampleSettings.json
+++ b/exampleSettings.json
@@ -8,7 +8,7 @@
     "themeLink": "www.theme.com",
     "fbLink": "https://www.facebook.com/plugdj",
     "youtubeLink": "www.youtube.com",
-    "website": "www.myroom.com",
+    "website": "plug.dj/just-a-lazy-room",
     "intervalMessages": ["Message 1", "Message 2"],
     "messageInterval": 4
 }
