--- a/standardSettings.json
+++ b/standardSettings.json
@@ -31,10 +31,10 @@
     "etaRestriction": false,
     "welcome": true,
     "opLink": null,
-    "rulesLink": null,
+    "rulesLink": "http://pastebin.com/aZHSKSVm",
     "themeLink": null,
     "fbLink": "www.facebook.com/NikhilJangid007",
-    "youtubeLink": "http://youtube.com/UKFdubstep" "www.youtube.com/MonstercatMedia" ,
+    "youtubeLink": "http://youtube.com/UKFdubstep" ,
     "website": null,
     "intervalMessages": [],
     "messageInterval": 5
